# TypeTrace

./: .clang-format  .clang-tidy  .clangd  .coveragerc  .cspell.yaml  .cspell_ignored  .editorconfig  .gitignore  .ruff.toml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Makefile  README.md  TODO.md  conanfile.txt  edu.ost.typetrace.yaml  install.bat  install.sh  makefile  meson.build  pyproject.ruff.toml  pyproject.toml  requirements.txt  setup.nsi  setup.sh  setup_wsl.sh  sonar-project.properties  typetrace-win-installer.nsi  typetrace.bat  typetrace.in  typetrace.spec  vcpkg.json
.dictionaries/: project-words.txt
.github/: changelog-config.json  release-drafter.yaml
.github/spellcheck/: cspell.json
.github/spellcheck/dictionaries/: project-words  project-words.txt  python.txt
.github/workflows/: build_windows.yaml  ci.yaml  create-release.yaml  git-commit-rules.yaml  labeler.yaml  pull-request-rule.yaml  pull-request-rules.yaml  python.yaml  spellcheck.yaml  test-flatpak.yaml  test.yml  update-branch.yaml  windows_build.yaml  windows_executable.yaml
backend/: __main__.py  cli.py  config.py  db.py  devices.py  events.py  logging_setup.py  sql.py
data/: edu.ost.typetrace-backend.desktop.in  edu.ost.typetrace-backend.service.in  edu.ost.typetrace.backend.service.in  edu.ost.typetrace.desktop.in  edu.ost.typetrace.gschema.xml  edu.ost.typetrace.metainfo.xml.in  edu.ost.typetrace.service.in  meson.build
data/icons/: meson.build
frontend/: Makefile  meson.build
frontend/data/: edu.ost.typetrace.desktop.in
frontend/src/: main.py  typetrace.in  window.py
packaging/win/: typetrace.nsi
scripts/: nfr-verification-script.py  run_tests.sh
src/: cli.cpp  cli.hpp  common.h  database.c  database.cpp  database.h  database.hpp  eventhandler.c  eventhandler.cpp  eventhandler.h  eventhandler.hpp  exceptions.hpp  input_utils.c  input_utils.h  logger.cpp  logger.hpp  main.c  main.cpp  main.py  meson.build  paths.c  paths.h  permission_check.c  permission_check.h  sql.h  sql.hpp  style.css  types.hpp  typetrace.gresource.xml  typetrace.in  version.h.in  window.py
src/backend/: cli.py  db.py  devices.py  events.py  logging_setup.py  meson.build  typetrace-backend.in
src/controller/: heatmap.py  verbose.py  window.py
src/model/: keystrokes.py  layouts.py
src/typetrace/: events.py
src/view/: heatmap.blp  verbose.blp  window.blp
tests/: __init__.py  integration_test.py  test_integration.py
tests/integration/: __init__.py  config.py  test_sql.py
tests/integration/backend/: cli.py  db.py
tests/unit/: __init__.py  mocks.py  test_config.py
tests/unit/backend/: __init__.py  test_cli.py  test_db.py  test_logging_setup.py
tests/unit/controller/: __init__.py  preferences.py  t_heatmap.py  t_preferences.py  test_heatmap.py  test_verbose.py  test_window.py  verbose.py
tests/unit/frontend/: __init__.py  test_application.py
tests/unit/model/: __init__.py  test_database_manager.py  (+1 more)
typetrace/: .ruff.toml  application.py  config.py  constants.hpp  exceptions.hpp  logging_setup.py  main.py  meson.build  sql.py  style-dark.css  style.css  types.hpp  typetrace.gresource.xml  typetrace.in
typetrace/.github/workflows/: ci.yml
typetrace/backend/: CMakeLists.txt  __init__.py  cli.py  config.py  db.py  dbus_service.py  devices.py  eventhandler.cpp  events.py  logging_setup.py  main.cpp  meson.build  sql.py
typetrace/backend/_REMOVE_AT_END/: cli.py  config.py  events.py  logging_setup.py
typetrace/backend/cli/: cli.cpp  cli.hpp
typetrace/backend/database_manager/: database_manager.cpp  database_manager.hpp
typetrace/backend/devices/: base.py  linux.py  windows_macos.py
typetrace/backend/event_handler/: event_handler.cpp  event_handler.hpp
typetrace/backend/events/: __init__.py  base.py  linux.py  windows_darwin.py  windows_macos.py
typetrace/backend/include/: cli.hpp
typetrace/backend/ipc/: __init__.py  base.py  linux_darwin.py  linux_macos.py  windows.py
typetrace/backend/src/: cli.cpp  database.cpp  eventhandler.cpp
typetrace/common/: CMakeLists.txt
typetrace/common/contants/: constants.hpp
typetrace/common/include/: sql.hpp
typetrace/common/sql/: sql.hpp
typetrace/common/src/: logger.cpp
typetrace/common/version/: version.hpp.in
typetrace/controller/: AdwPreferencesWindow.py  adw_preferences_window.py  heatmap.py  preferences.py  statistics.py  verbose.py  window.py
typetrace/controller/utils/: __init__.py  chart_utils.py  color_utils.py  desktop_utils.py  dialog_utils.py  import_export.py
typetrace/controller/utils/charts/: base_chart.py  line_chart.py  pie_chart.py
typetrace/frontend/: CMakeLists.txt  __init__.py  application.cpp  application.hpp  application.py  main.cpp  meson.build
typetrace/frontend/controller/: __init__.py  heatmap.py  preferences.py  statistics.py  verbose.py  window.py
typetrace/frontend/controller/utils/: color_utils.py  desktop_utils.py  dialog_utils.py
typetrace/frontend/controller/utils/charts/: __init__.py  base_chart.py  line_chart.py  pie_chart.py
typetrace/frontend/model/: database_manager.py  db_filehandler.py  keystrokes.py  layouts.py
typetrace/frontend/service/: __init__.py  backend_connector.py
typetrace/model/: __init__.py  database_manager.py  keystroke.py  keystroke_store.py  keystrokes.py  layouts.py
typetrace/preferences/: __init__.py  appearance.py  base.py  dialog.py  keyboard.py
typetrace/preferences/database/: __init__.py  base.py  database.py  delete_handler.py  export_handler.py  import_handler.py  open_handler.py
typetrace/service/: backend_connector.py
typetrace/tests/: __init__.py  test_cli.py  test_database_manager.py  test_db.py  test_events.py  test_heatmap.py  test_keystrokes.py  test_preferences.py  test_regression.py  test_smoke.py  test_system.py  test_usability.py  test_verbose.py  test_window.py
typetrace/tests/model/: __init__.py  test_keystrokes.py
typetrace/view/: AdwPreferencesWindow.blp  heatmap.blp  preferences.blp  statistics.blp  window.blp
windows/: install.bat  launch_typetrace.bat  launch_typetrace.vbs
(+12 files in other folders)
