[project]
name = "typetrace"
version = "0.1.0" # TODO: Set this to release version

requires-python = "==3.12.*"
dependencies = [
    "appdirs==1.1.0",
    "dbus-python==1.3.2",
    "evdev==1.6.0",
]

[project.optional-dependencies]
dev = [
    "pygobject<3.52.0",
    "ruff>=0.11",
    "pytest==7.3.2",
    "pytest-mock==3.10.0",
]

[tool.setuptools]
packages = [
    "typetrace",
    "tests",
]

[tool.ruff.lint]
extend-select = [
    "ALL",
]
ignore = [
    "ANN401", # Ignore `Any` type annotation for functions
    "ANN003", # Ignore missing type annotation for **kwargs
    "D203",   # In conflict with D211
    "D213",   # In conflict with D212
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "FBT003",  # Ignore boolean position in function call
    "PLR2004", # Ignore magic values
    "S101",    # Ignore asserts
    "SLF001",  # Allow access to private member
]
